--- a/Speech-and-Language-Processing/Speech Emotion Recognition.ipynb
+++ b/Speech-and-Language-Processing/Speech Emotion Recognition.ipynb
@@ -13,13 +13,7 @@
     "Winter Call, A.Y. 2022/2023\n",
     "    \n",
     "\n",
-    "Speech Emotion Recognition is a task of speech processing and computational paralinguistics that aims to recognize and categorize the emotions expressed in spoken language. The goal is to predict both the action requested and the object that is affected by the action.\n",
-    "\n",
-    "\n",
-    "    \n",
-    "                Target = action + object\n",
-    "                • action: the type of action required through the intent.\n",
-    "                • object: the device involved by intent."
+    "Speech Emotion Recognition is a task of speech processing and computational paralinguistics that aims to recognize and categorize the emotions expressed in spoken language. The goal is to determine the emotional state of a speaker, such as happiness, anger, sadness, or frustration, from their speech patterns, such as prosody, pitch, and rhythm."
    ]
   },
   {
