--- a/Speech-Emotion-Recognition-Audio/Speech_Emotion_Recognition_News.ipynb
+++ b/Speech-Emotion-Recognition-Audio/Speech_Emotion_Recognition_News.ipynb
@@ -4698,17 +4698,9 @@
     "<b> How to dealing with Overfitting during Cross Validation: </b>\n",
     "\n",
     "### The Right Way:\n",
-    "<img src=\"https://www.marcoaltini.com/uploads/1/3/2/3/13234002/9101820.jpg?372\"> <br>\n",
+    "<img src=\"9101820.jpg\" width=\"600\" height=\"500\"> <br>\n",
     "As you see above, SMOTE occurs \"during\" cross validation and not \"prior\" to the cross validation process. Synthetic data are created only for the training set without affecting the validation set.\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1952f0d9",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://www.marcoaltini.com/uploads/1/3/2/3/13234002/9101820.jpg?372\" width=\"600\" height=\"500\"> <br>\n"
    ]
   },
   {
